# resurrection-wallet

./: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.js
.github/workflows/: main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: currency.ts  phoenixdApi.ts  setupStore.ts  utils.ts
src/lib/components/: MainScreen.svelte  Modal.svelte  PhoenixdInstall.svelte  ReadQR.svelte  Receive.svelte  Send.svelte  Setup.svelte
src/routes/: +page.svelte
